--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -1,22 +1,25 @@
 <mat-nav-list>
     <div class="logo py-4">
-        <img src="assets/images/future.png">
+        <img src="assets/images/yy.png">
     </div>
+    <br>
     <mat-divider></mat-divider>
-    <a mat-list-item routerLinkActive="list-item-active" routerLink="/classrooms">
-        <mat-icon>supervisor_account</mat-icon>Classrooms
+    <a mat-list-item routerLinkActive="list-item-active" routerLink="/classrooms" style="color: #2d265e
+    ">
+        <mat-icon style="color: #2d265e;">meeting_room</mat-icon>Classrooms
     </a>
-
+    <br>
     <a mat-list-item routerLinkActive="list-item-active " routerLink="/attendance">
-        <mat-icon>dashboard</mat-icon> Attendance
+        <mat-icon style="color: #2d265e;">event</mat-icon> Attendance
     </a>
 
-
+    <br>
     <a mat-list-item routerLinkActive="list-item-active " routerLink="/students">
-        <mat-icon>dashboard</mat-icon> Students
+        <mat-icon style="color: #2d265e;">school_outlined</mat-icon> Students
     </a>
+    <br>
 
     <a mat-list-item routerLinkActive="list-item-active " routerLink="/teachers">
-        <mat-icon>dashboard</mat-icon> Teacher
+        <mat-icon style="color: #2d265e;">people</mat-icon>Professors
     </a>
 </mat-nav-list>
