--- a/src/app/dashboard-teacher/dashboard-teacher.component.scss
+++ b/src/app/dashboard-teacher/dashboard-teacher.component.scss
@@ -1,32 +1,67 @@
-.form-container {
-    max-width: 800px;
-    margin: 0 auto;
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 10px;
-}
-
-.example-container {
-    margin-top: 20px;
-}
-
-// .form-container {
-//     max-width: 800px;
-//     margin: 0 auto;
-//     padding: 20px;
-//     border: 1px solid #ccc;
-//     border-radius: 10px;
-//     display: flex;
-//     flex-direction: column;
-//     align-items: center;
-// }
-// .example-container {
-//     margin-top: 20px;
-//     display: flex;
-//     flex-direction: column;
-//     align-items: center;
-// }
-button {
-    margin-top: 20px;
-    display: block;
-}
+    .example-container {
+        max-width: 800px;
+        margin: 0 auto;
+        padding: 20px;
+        border: 1px solid #040404;
+        border-radius: 10px;
+        background-color: rgb(239, 239, 239);
+    }
+    
+    .example-container {
+        margin-top: 20px;
+    }
+    
+    // .form-container {
+    //     max-width: 800px;
+    //     margin: 0 auto;
+    //     padding: 20px;
+    //     border: 1px solid #ccc;
+    //     border-radius: 10px;
+    //     display: flex;
+    //     flex-direction: column;
+    //     align-items: center;
+    // }
+    // .example-container {
+    //     margin-top: 20px;
+    //     display: flex;
+    //     flex-direction: column;
+    //     align-items: center;
+    // }
+    body {
+        background-color: #2d265e;
+    }
+    
+    * {
+        margin: 0;
+        padding: 0;
+        // box-sizing: border-box;
+        // font-family: 'Poppins', sans-serif;
+    }
+    
+    body {
+        display: flex;
+        justify-content: flex-end;
+        display: flex;
+        justify-content: flex-end;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        min-height: 100vh;
+        background-image: url('YES.png');
+        background-size: cover;
+        ;
+    }
+    
+    button {
+        margin-top: 20px;
+        display: block;
+    }
+    
+    // .form-container {
+    //     position: relative;
+    // }
+    .button-container {
+        position: absolute;
+        top: 20px;
+        right: 20px;
+    }
