--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,23 +1,26 @@
 <mat-toolbar>
     <mat-toolbar-row class="justify-content-between">
-        <button mat-icon-button (click)="toggleSidebar()">
+        <button mat-icon-button (click)="toggleSidebar()" style="color:white">
       <mat-icon>menu</mat-icon>
     </button>
         <div class="row mr-2 ml-auto">
             <ul class="row m-0 align-items-center">
                 <li>
-                    <button mat-button [matMenuTriggerFor]="menu" class="user mt-2 d-flex align-items-center">
-                      
-                      <img [src]=mypic  alt="" class="user-image mr-1 p-2" (click)="logout()">
 
-            Admin
-            <mat-icon class="user-image-icon ml-1">keyboard_arrow_down</mat-icon >
-          </button>
-                    <mat-menu #menu="matMenu">
+
+                    <button mat-menu-item (click)="logout()" style="color:white">
+                        <mat-icon style="color: white;">exit_to_app</mat-icon> 
+                               </button>
+                    <!-- <button mat-button [matMenuTriggerFor]="menu" class="user mt-2 d-flex align-items-center"> -->
+                    <!-- 
+                    <img [src]=mypic alt="" class="user-image mr-1 p-2" (click)="logout()"> Admin -->
+                    <!-- <mat-icon class="user-image-icon ml-1">keyboard_arrow_down</mat-icon >
+          </button> -->
+                    <!-- <mat-menu #menu="matMenu">
                         <button mat-menu-item (click)="logout()">
-              <mat-icon>exit_to_app</mat-icon> Logout
-            </button>
-                    </mat-menu>
+              <mat-icon>exit_to_app</mat-icon> Logout -->
+                    <!-- </button>
+                    </mat-menu> -->
                 </li>
             </ul>
         </div>
