--- a/src/app/students/students.component.html
+++ b/src/app/students/students.component.html
@@ -5,20 +5,25 @@
 <div class="mat-elevation-z8">
     <table mat-table [dataSource]="dataSource" matSort>
         <!-- Progress Column -->
+        <ng-container matColumnDef="cin">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
+            <td mat-cell *matCellDef="let row"> {{row.cin}}</td>
+        </ng-container>
         <ng-container matColumnDef="Name">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> First name </th>
             <td mat-cell *matCellDef="let row"> {{row.Name}}</td>
+        </ng-container>
+        <ng-container matColumnDef="last">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Last name</th>
+            <td mat-cell *matCellDef="let row"> {{row.last}} </td>
         </ng-container>
         <!-- Name Column -->
         <ng-container matColumnDef="level">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> level </th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Level </th>
             <td mat-cell *matCellDef="let row"> {{row.level}} </td>
         </ng-container>
-        <!-- <ng-container matColumnDef="last">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> last</th>
-            <td mat-cell *matCellDef="let row"> {{row.last}} </td>
-        </ng-container>
-        <ng-container matColumnDef="is_present">
+
+        <!-- <ng-container matColumnDef="is_present">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Presence </th>
             <td mat-cell *matCellDef="let row">
                 <span [ngClass]="row.is_present ? 'green-tick' : 'red-cross'"></span>
