--- a/src/app/teacher/teacher.component.scss
+++ b/src/app/teacher/teacher.component.scss
@@ -10,7 +10,7 @@ body {
     align-items: center;
     justify-content: center;
     min-height: 100vh;
-    background-image: url('background.png');
+    background-image: url('TP.png');
     background-size: cover;
 }
 
@@ -18,7 +18,7 @@ body {
     position: relative;
     width: 70vw;
     height: 80vh;
-    background: #fff;
+    background: rgb(252, 249, 252);
     border-radius: 15px;
     box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px;
     overflow: hidden;
@@ -31,7 +31,7 @@ body {
     left: -50%;
     width: 100%;
     height: 100%;
-    background: linear-gradient(-45deg, #cae9ff, #cae9ff);
+    background: white; //here
     z-index: 6;
     transform: translateX(100%);
     transition: 1s ease-in-out;
@@ -73,8 +73,9 @@ form.sign-up-form {
 
 .title {
     font-size: 35px;
-    color: #000000;
+    color: #2d265e;
     margin-bottom: 10px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 .input-field {
@@ -111,7 +112,7 @@ form.sign-up-form {
     height: 50px;
     border: none;
     border-radius: 50px;
-    background: #4361ee;
+    background: #2d265e;
     color: #fff;
     font-weight: 600;
     text-align: center;
@@ -120,7 +121,7 @@ form.sign-up-form {
 }
 
 .btn:hover {
-    background: #3f8efc;
+    background: #a776ec;
 }
 
 .panels-container {
@@ -167,7 +168,8 @@ form.sign-up-form {
 }
 
 .image {
-    width: 100%;
+    width: 500px;
+    height: 300px;
     transition: 1.1s ease-in-out;
     transition-delay: 0.4s;
 }
@@ -259,4 +261,15 @@ form.sign-up-form {
     form {
         width: 90%;
     }
+}
+
+.error-message {
+    position: absolute;
+    top: 32%;
+    left: 25%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    text-align: center;
+    color: red;
+    font-size: 14px;
 }
