--- a/src/app/teachers/teachers.component.html
+++ b/src/app/teachers/teachers.component.html
@@ -5,9 +5,17 @@
 <div class="mat-elevation-z8">
     <table mat-table [dataSource]="dataSource" matSort>
         <!-- Progress Column -->
+        <ng-container matColumnDef="cin">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
+            <td mat-cell *matCellDef="let row"> {{row.cin}}</td>
+        </ng-container>
         <ng-container matColumnDef="Name">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> First name </th>
             <td mat-cell *matCellDef="let row"> {{row.Name}}</td>
+        </ng-container>
+        <ng-container matColumnDef="last">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Last name </th>
+            <td mat-cell *matCellDef="let row"> {{row.last}}</td>
         </ng-container>
         <!-- Name Column -->
         <ng-container matColumnDef="level">
